Fixed a Makefile bug

--- a/project-euler/Problem025/Makefile
+++ b/project-euler/Problem025/Makefile
@@ -1,6 +1,6 @@
 # Copied from: http://stackoverflow.com/questions/1484817/how-do-i-make-a-simple-makefile-gcc-unix
 
-TARGET  := Problem025
+TARGET  := exercise_solution 
 CC      := g++
 CFLAGS  := -g -Wall
 
@@ -9,7 +9,7 @@ CFLAGS  := -g -Wall
 default: $(TARGET)
 all: default
 
-OBJECTS := $(patsubst %.c, %.o, $(wildcard *.cpp))
+OBJECTS := $(patsubst %.cpp, %.o, $(wildcard *.cpp))
 HEADERS := $(wildcard *.h)
 
 %.o: %.cpp $(HEADERS)
@@ -21,5 +21,5 @@ $(TARGET): $(OBJECTS)
 	$(CC) $(CFLAGS) $(OBJECTS) -o $@
 
 clean:
-	-rm -f $(OBJECTS)
+	-rm -f *.o
 	-rm -f $(TARGET)
