--- a/project-euler/Makefile
+++ b/project-euler/Makefile
@@ -14,11 +14,13 @@ SRC_DIR := src/
 all: $(TARGET) 
 
 TARGET_SOURCES := $(SRC_DIR)ProjectEulerMain.cpp \
+                  $(SRC_DIR)CommonUtilities.cpp \
                   $(SRC_DIR)Problem001.cpp \
                   $(SRC_DIR)Problem002.cpp \
                   $(SRC_DIR)Problem004.cpp \
                   $(SRC_DIR)Problem009.cpp \
                   $(SRC_DIR)Problem011.cpp \
+                  $(SRC_DIR)Problem012.cpp \
                   $(SRC_DIR)Problem014.cpp \
 
 TARGET_OBJECTS := $(addprefix $(OBJ_DIR),$(notdir $(TARGET_SOURCES:.cpp=.o)))
